# personal-website

./: .env.example  README.md  additional.d.ts  package-lock.json  package.json  start.sh  tsconfig.json
client/: angular.json  package-lock.json  package.json
client/src/: base.scss  dark-theme.scss  index.html  main.ts  styles.scss
components/: GameServerCard.tsx  Navbar.tsx  NavbarContext.tsx  ThemeControl.tsx  ThemeControlContext.tsx
components/server-control/: NotifSnackbar.tsx  RefreshButton.tsx
game-server-query/: .gitignore  Cargo.toml  game-server-query.zsh
game-server-query/src/: main.rs
nextjs/: .gitignore  additional.d.ts  package-lock.json  package.json
nextjs/components/: GameServerCard.tsx  Navbar.tsx
nextjs/pages/: _app.tsx
nextjs/styles/: globals.css
nextjs/utils/: initAuth.ts
old/: README.md
old/components/: Navbar.tsx
old/pages/: _app.tsx
old/utils/: fileData.ts  types.d.ts
pages/: _app.tsx  about.tsx  index.tsx
pages/server-control/: index.tsx  login.tsx
server/: .gitignore  README.md  add-systemd-user-service.sh  package-lock.json  package.json  start.sh  tsconfig.json
server-old/: .gitignore  package-lock.json  tsconfig.json
server-old/src/: types.d.ts
server/public/: index.html  robots.txt
server/src/: app.controller.ts  app.module.ts  args.ts  config.ts  firebase.ts  gameQuery.ts  globals.ts  index.ts  server.ts  twoWayMap.ts  (+1 more)
src/: ambient.d.ts  index.ts
styles/: SpinKeyframes.module.css
utils/: doSsh.ts  fileData.ts  initAuth.ts  types.d.ts
website/: package-lock.json  package.json  svelte.config.js
(+115 files in other folders)
