[package]
name = "game-server-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
dotenvy = "0.15.7"
glob = "0.3.1"
regex = "1.9.1"
shellexpand = "3.1.0"
